@@ -1,3 +1,5 @@
 DIST kadu-0.6.0.1.tar.bz2 1566609 RMD160 06709d16dd84a10c917fb12ee3dd06eb4ef18879 SHA1 727c5b25b7178f8d947497182da6817c170b7d6a SHA256 5b022f3043b112bbba6115bdf2877ff01d6b3b1342d74db5977fa92b1662d68c
+DIST kadu-0.6.0.2.tar.bz2 1568547 RMD160 2e8952831cada064c1caa65b943b6e44880b39c3 SHA1 efbae7840078eab46c5ac20d6e7397cf1c1457bd SHA256 8e06b554761e39890e48ba723145d4e1e0919cc84fcd978f215a6e2a30f87bfa
 EBUILD kadu-speech-0.6.0.1.ebuild 295 RMD160 347202c066cd3167dc485b0965211a9116aa7275 SHA1 eeec51195e178f3d0869c19482045bbfc3b7cc6f SHA256 446ba7b3e1e81590d799f165e5b8bd72a63ade20307d951200609d62b33ed141
-MISC ChangeLog 304 RMD160 6c0a7cfd9a0a944b95e2fb11657a255cec472e12 SHA1 02b5949ccc40cbdca53e8281ab0f3cc61e1aa2f9 SHA256 2e28a545bd6a69a42388b6441ceaf31d7b45848d11d761663a8f99d27b40f372
+EBUILD kadu-speech-0.6.0.2.ebuild 295 RMD160 347202c066cd3167dc485b0965211a9116aa7275 SHA1 eeec51195e178f3d0869c19482045bbfc3b7cc6f SHA256 446ba7b3e1e81590d799f165e5b8bd72a63ade20307d951200609d62b33ed141
+MISC ChangeLog 395 RMD160 bacadd5b3ac035f72582b5a7435b4be30329e1b3 SHA1 2e3928075cac280f94da57efc17303a248612734 SHA256 a38e00bb3bcdb817bc65df6ed5668e0d30de30fa68c4e212d638f3b7b7b2551b
