@@ -1,0 +1,10 @@
+inherit kadu
+
+MOD_DEPEND="app-accessibility/powiedz >=net-im/kadu-notify-${MIN_REQ}"
+
+inherit kadu-module
+
+SRC_URI="http://www.kadu.net/download/stable/kadu-${K_PV}.tar.bz2"
+DESCRIPTION="Kadu module allowing to read message by speech synthesizer"
+HOMEPAGE="http://kadu.net"
+KEYWORDS="amd64 x86"
